# datura

./: .gitignore  Cargo.toml  README.md  config.toml  zlib2_covers_zh.txt
.github/workflows/: release.yml
src/: config.rs  download.rs  extract.rs  lib.rs
